redesign_green/style.css
/* Reset */
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

/* Basic Layout */
body {
    font-family: Arial, sans-serif;
    line-height: 1.6;
    color: #333;
    background-color: #f9f9f9;
    display: flex;
    justify-content: center;  /* Centers .body-container horizontally */
    align-items: center;      /* Centers .body-container vertically */
    min-height: 100vh;        /* Full viewport height */
    margin: 0;                /* Reset margin to ensure full centering */
}

.body-container {
    background-color: #fff;
    width: 100%;
    max-width: 800px;
    text-align: center;
    position: relative;
    display: flex;
    flex-direction: column;
    min-height: 100vh;
}

.container {
    max-width: 1200px;
    margin: 0 auto;
    padding: 0 20px;
}

/* Header */
.header {
    background-color: #006d77; /* Turquoise for serious tone */
    padding: 20px 0;
    text-align: left;
}

.header .logo {
    font-size: 1.5em;
    color: #fff;
}

.navigation {
    display: flex;
    gap: 20px;
}

.navigation a, h1 a {
    color: #fff;
    text-decoration: none;
    font-weight: bold;
}

.navigation a:hover {
    text-decoration: underline;
}

/* Hero Section */
.hero {
    background-color: #edf8f8;  /* light green background e0fbfc -> edf8f8 */
    text-align: center;
    padding: 60px 20px;
}

.hero h2 {
    font-size: 2.5em;
    color: #006d77;
    margin-bottom: 20px;
}

.hero p {
    font-size: 1.2em;
    color: #555;
    margin-bottom: 30px;
}

.cta-button {
    display: inline-block;
    background-color: #006d77;
    color: #fff;
    padding: 10px 20px;
    text-decoration: none;
    font-weight: bold;
    border-radius: 5px;
}

.cta-button:hover {
    background-color: #005c65;
}

/* About Section */
.about {
    padding: 60px 20px;
    background-color: #fff;
    text-align: center;
}

.about h2 {
    font-size: 2em;
    color: #333;
    margin-bottom: 10px;
}

.about p {
    font-size: 1.1em;
    color: #555;
    margin-bottom: 20px;
}

.cta-link {
    color: #006d77;
    font-weight: bold;
    text-decoration: none;
}

.cta-link:hover {
    text-decoration: underline;
}

/* Footer */
.footer {
    background-color: #333;
    color: #fff;
    text-align: center;
    padding: 20px 0;
}

.footer a {
    color: #00bcd4; /* Lighter turquoise for links */
    text-decoration: none;
}

.footer a:hover {
    text-decoration: underline;
}

/************************************************************
PROJECTS PAGE
*************************************************************/
.projects-hero {
    background-color: #edf8f8;  /* light green background e0fbfc -> edf8f8 */
    text-align: center;
    padding: 40px 20px;
}

.projects-hero h2 {
    font-size: 2em;
    color: #006d77;
}

.projects-hero p {
    font-size: 1.2em;
    color: #555;
    margin-bottom: 20px;
}

/* Projects Section */
.projects {
    background-color: #fff;
    padding: 60px 20px;
    text-align: left;
}

.project-icon {
    width: 80px;
    height: 80px;
    border-radius: 25px;
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
}

.project {
    margin-bottom: 40px;
    padding: 20px;
    border-radius: 8px;
    background-color: #f9f9f9;
    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
}

.project td {
    padding: 10px;
    vertical-align: top;
}

.project img {
    margin-top: 10px;
}

.project h3 {
    color: #006d77;
    font-size: 1.8em;
    margin-bottom: 10px;
}

.project p {
    color: #555;
    font-size: 1.1em;
    margin-bottom: 10px;
}

.cta-link {
    color: #006d77;
    font-weight: bold;
    text-decoration: none;
}

.cta-link:hover {
    text-decoration: underline;
}



/************************************************************
 CONTACT PAGE
 *************************************************************/
.contact-hero {
    background-color: #edf8f8;  /* light green background e0fbfc -> edf8f8 */
    text-align: center;
    padding: 40px 20px;
}

.contact-hero h2 {
    font-size: 2em;
    color: #006d77;
}

.contact-hero p {
    font-size: 1.2em;
    color: #555;
    margin-bottom: 20px;
}

.contact {
    padding: 60px 20px;
    background-color: #fff;
    text-align: center;
}

.contact h2 {
    font-size: 2em;
    color: #333;
    margin-bottom: 10px;
}

.contact p {
    font-size: 1.1em;
    color: #555;
    margin-bottom: 20px;
}

.contact a {
    color: #006d77;
    text-decoration: none;
    font-weight: bold;
}

.contact a:hover {
    text-decoration: underline;
}

